# MindSpore.jl

./: CMakeLists.txt  README.en.md  README.md  build.sh  cxx_graph_api.cc  main.cc
CxxWrapExample/: Manifest.toml  Project.toml  build.sh  runjulia
CxxWrapExample/ccsrc/: CMakeLists.txt  cxx_graph_api.cc  cxx_graph_api.h  main.cc
CxxWrapExample/src/: MindSpore.jl  compiler.jl  example.jl  graph_api.jl  graph_builder.jl
GraphCompiler/: LICENSE  Project.toml  README.md
GraphCompiler/docs/: Manifest.toml  Project.toml  make.jl
GraphCompiler/docs/src/: index.md
GraphCompiler/src/: GraphCompiler.jl  example.jl  mindspore.jl  ms_example.py
GraphCompiler/test/: runtests.jl
ms_cxx_graph_api_example/: cxx_graph_api.h
